--- a/themes/geekboot/assets/scss/dark-mode.scss
+++ b/themes/geekboot/assets/scss/dark-mode.scss
@@ -19,7 +19,6 @@
     // Sidebar nav
     --nav-highlight-color: #{$aqua-900};
     --btn-close-color:     #{$fog-0};
-    --btn-close-filter:    invert(1) grayscale(100%) brightness(200%);
 
     //Version dropdown
     --dropdown-highlight: #{$fog-900};
